--- a/sicongliu.html
+++ b/sicongliu.html
@@ -213,38 +213,42 @@
 	<p>&bull; <b>Sicong Liu</b>*, Fang Yang, Jian Song, "Narrowband Interference Cancellation Based on Priori Aided Compressive Sensing for DTMB Systems,” <i>IEEE Transactions on Broadcasting</i>, vol.61, no.1, pp.66-74, March 2015.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/6998816">Abstract</a>][<a target="blank"  href="papers/TBC.pdf">PDF</a>][<a target="blank"  href="papers/TBC.txt">bibtex</a>]</p>
 
-	<p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, "An Optimal Interleaving Scheme with Maximum Time-Frequency Diversity for PLC Systems,” <i>IEEE Transactions on Power Delivery</i>, vol. 31, no. 3, pp. 1007-1014, June 2016.
-		[<a target="blank" href="https://ieeexplore.ieee.org/document/6937195">Abstract</a>][<a target="blank"  href="papers/TPWRD.pdf">PDF</a>][<a target="blank"  href="papers/TPWRD.txt">bibtex</a>]</p>
-
-	<p>&bull; <b>Sicong Liu</b>, Fang Yang*,  Xianbin Wang, Jian Song, Zhu Han, "Structured-Compressed-Sensing-Based Impulsive Noise Cancellation for MIMO Systems," <i>IEEE Transactions on Vehicular Technology</i>, 2017, 66(8): 6921 - 6931.
-	[<a target="blank" href="https://ieeexplore.ieee.org/document/7833213">Abstract</a>][<a target="blank"  href="papers/TVT17.pdf">PDF</a>][<a target="blank"  href="papers/TVT17.txt">bibtex</a>]</p>
-
-	<p>&bull; <b>Sicong Liu</b>, Fang Yang*, Wenbo Ding, Xianbin Wang, and Jian Song, "Two Dimensional Structured Compressed Sensing Based NBI Cancellation Exploiting Spatial and Temporal Correlations in MIMO Systems," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 11, pp. 9020-9028, Nov. 2016.
-	[<a target="blank" href="https://ieeexplore.ieee.org/document/7373681">Abstract</a>][<a target="blank"  href="papers/TVT16a.pdf">PDF</a>][<a target="blank"  href="papers/TVT16a.txt">bibtex</a>]</p>
-
-	<p>&bull; <b>Sicong Liu</b>, Fang Yang, Chao Zhang, Jian Song, "Narrowband interference mitigation based on compressive sensing for OFDM systems”, <i>IEICE Transactions on Fundamentals</i>, vol. E98-A, no. 3, pp. 870–873, March 2015.
-		[<a target="blank" href="http://search.ieice.org/bin/summary.php?id=e98-a_3_870&amp;year=2015">Abstract</a>][<a target="blank"  href="papers/IEICE.pdf">PDF</a>][<a target="blank"  href="papers/IEICE.txt">bibtex</a>]</p>
-
-	<p>&bull; <b>Sicong Liu</b>, Fang Yang,  Wenbo Ding, Jian Song, and Andrea M. Tonello, "Structured Compressed Sensing Based Narrowband Interference Elimination for In-Home Power Line Communications," <i>IEEE Transactions on Consumer Electronics</i>, vol. 63, no. 1, pp. 10-18, Feb. 2017.
-		[<a target="blank" href="https://ieeexplore.ieee.org/document/7931965">Abstract</a>][<a target="blank"  href="papers/TCE.pdf">PDF</a>][<a target="blank"  href="papers/TCE.txt">bibtex</a>]</p>
-
-		<p>&bull; Xu Ma, Fang Yang, <b>Sicong Liu</b>, Jian Song, "Channel Estimation for Wideband Underwater Visible Light Communication: A Compressive Sensing Perspective", <i>Optics Express</i>, vol. 26, no. 1, pp. 311-321, Aug. 2018.
+	<p>&bull; Xu Ma, Fang Yang, <b>Sicong Liu</b>, Jian Song, "Channel Estimation for Wideband Underwater Visible Light Communication: A Compressive Sensing Perspective", <i>Optics Express</i>, vol. 26, no. 1, pp. 311-321, Aug. 2018.
 		[<a target="blank" href="https://www.osapublishing.org/oe/fulltext.cfm?uri=oe-26-1-311&id=380516#articleBody">Abstract</a>][<a target="blank"  href="papers/OE18ma.pdf">PDF</a>][<a target="blank"  href="papers/OE18ma.txt">bibtex</a>]</p>
-
-	<p>&bull; Fang Yang, Junnan Gao and <b>Sicong Liu</b>, "Novel Visible Light Communication Approach Based on Hybrid OOK and ACO-OFDM," <i>IEEE Photonics Technology Letters</i>, vol. 28, no. 14, pp. 1585-1588, July 2016.
-		[<a target="blank" href="https://ieeexplore.ieee.org/document/7454694">Abstract</a>][<a target="blank"  href="papers/PTL16yang.pdf">PDF</a>][<a target="blank"  href="papers/PTL16yang.txt">bibtex</a>]</p>
-
-	<p>&bull; Xu Ma, Fang Yang, <b>Sicong Liu</b>, Jian Song and Zhu Han, “Design and Optimizationon Training Sequence for mmWave Communications: A New Approach for Sparse Channel Estimation in Massive MIMO", in <i>IEEE Journal on Selected Areas in Communications</i>, vol. 35, no. 7, pp. 1486-1497, Apr. 2017.
-		[<a target="blank" href="https://ieeexplore.ieee.org/document/7913633">Abstract</a>][<a target="blank"  href="papers/JSAC17ma.pdf">PDF</a>][<a target="blank"  href="papers/JSAC17ma.txt">bibtex</a>]</p>
 
 	<p>&bull; X. Ma, F. Yang, <b>S. Liu</b>, J. Song and Z. Han, "Sparse Channel Estimation for MIMO-OFDM Systems in High-Mobility Situations," in <i>IEEE Transactions on Vehicular Technology</i>, vol. 67, no. 7, pp. 6113-6124, July 2018.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/8305666">Abstract</a>][<a target="blank"  href="papers/TVT18ma.pdf">PDF</a>][<a target="blank"  href="papers/TVT18ma.txt">bibtex</a>]</p>
 
+	<p>&bull; Tengjiao Wang, <b>Sicong Liu</b>, Fang Yang, Jintao Wang, Jian Song, “Generalized Spatial Modulation Based Multi-User and Signal Detection Scheme for Terrestrial Return Channel with NOMA”, in <i>IEEE Transactions on Broadcasting</i>, vol. 64, no. 2, pp. 211-219, June 2018.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/8057263">Abstract</a>][<a target="blank"  href="papers/TBC18wang.pdf">PDF</a>][<a target="blank"  href="papers/TBC18wang.txt">bibtex</a>]</p>
+
+
+	<p>&bull; <b>Sicong Liu</b>, Fang Yang*,  Xianbin Wang, Jian Song, Zhu Han, "Structured-Compressed-Sensing-Based Impulsive Noise Cancellation for MIMO Systems," <i>IEEE Transactions on Vehicular Technology</i>, 2017, 66(8): 6921 - 6931.
+	[<a target="blank" href="https://ieeexplore.ieee.org/document/7833213">Abstract</a>][<a target="blank"  href="papers/TVT17.pdf">PDF</a>][<a target="blank"  href="papers/TVT17.txt">bibtex</a>]</p>
+
+	<p>&bull; <b>Sicong Liu</b>, Fang Yang,  Wenbo Ding, Jian Song, and Andrea M. Tonello, "Structured Compressed Sensing Based Narrowband Interference Elimination for In-Home Power Line Communications," <i>IEEE Transactions on Consumer Electronics</i>, vol. 63, no. 1, pp. 10-18, Feb. 2017.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/7931965">Abstract</a>][<a target="blank"  href="papers/TCE.pdf">PDF</a>][<a target="blank"  href="papers/TCE.txt">bibtex</a>]</p>
+
+	<p>&bull; Xu Ma, Fang Yang, <b>Sicong Liu</b>, Jian Song and Zhu Han, “Design and Optimizationon Training Sequence for mmWave Communications: A New Approach for Sparse Channel Estimation in Massive MIMO", in <i>IEEE Journal on Selected Areas in Communications</i>, vol. 35, no. 7, pp. 1486-1497, Apr. 2017.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/7913633">Abstract</a>][<a target="blank"  href="papers/JSAC17ma.pdf">PDF</a>][<a target="blank"  href="papers/JSAC17ma.txt">bibtex</a>]</p>
+
+	<p>&bull; Xu Ma, Fang Yang, <b>Sicong Liu</b>, Wenbo Ding, Jian Song, "Structured Compressive Sensing Based Channel Estimation for Time Frequency Training OFDM Systems over Doubly Selective Channel", in <i>IEEE Wireless Communications Letters</i>, vol. 6, no. 2, pp. 266-269, April 2017.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/7857041">Abstract</a>][<a target="blank"  href="papers/WCL17ma.pdf">PDF</a>][<a target="blank"  href="papers/WCL17ma.txt">bibtex</a>]</p>
+
+	<p>&bull; Fang Yang, Junnan Gao, <b>Sicong Liu</b>, and Jian Song, "Clipping Noise Elimination for OFDM Systems by Compressed Sensing With Partially Aware Support," in <i>IEEE Transactions on Broadcasting</i>, vol. 63, no. 1, pp. 103-110, March 2017.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/7571180">Abstract</a>][<a target="blank"  href="papers/TBC17yang.pdf">PDF</a>][<a target="blank"  href="papers/TBC17yang.txt">bibtex</a>]</p>
+
+	<p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, "An Optimal Interleaving Scheme with Maximum Time-Frequency Diversity for PLC Systems,” <i>IEEE Transactions on Power Delivery</i>, vol. 31, no. 3, pp. 1007-1014, June 2016.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/6937195">Abstract</a>][<a target="blank"  href="papers/TPWRD.pdf">PDF</a>][<a target="blank"  href="papers/TPWRD.txt">bibtex</a>]</p>
+
+	<p>&bull; <b>Sicong Liu</b>, Fang Yang*, Wenbo Ding, Xianbin Wang, and Jian Song, "Two Dimensional Structured Compressed Sensing Based NBI Cancellation Exploiting Spatial and Temporal Correlations in MIMO Systems," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 11, pp. 9020-9028, Nov. 2016.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/7373681">Abstract</a>][<a target="blank"  href="papers/TVT16a.pdf">PDF</a>][<a target="blank"  href="papers/TVT16a.txt">bibtex</a>]</p>
+
+	<p>&bull; Fang Yang, Junnan Gao and <b>Sicong Liu</b>, "Novel Visible Light Communication Approach Based on Hybrid OOK and ACO-OFDM," <i>IEEE Photonics Technology Letters</i>, vol. 28, no. 14, pp. 1585-1588, July 2016.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/7454694">Abstract</a>][<a target="blank"  href="papers/PTL16yang.pdf">PDF</a>][<a target="blank"  href="papers/PTL16yang.txt">bibtex</a>]</p>
+
 	<p>&bull; Wenbo Ding, Yang Lu, Fang Yang, Wei Dai, Pan Li, <b>Sicong Liu</b>, and Jian Song, "Spectrally Efficient CSI Acquisition for Power Line Communications: A Bayesian Compressive Sensing Perspective," in <i>IEEE Journal on Selected Areas in Communications</i>, vol. 34, no. 7, pp. 2022-2032, July 2016.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/7467473">Abstract</a>][<a target="blank"  href="papers/JSAC16ding.pdf">PDF</a>][<a target="blank"  href="papers/JSAC16ding.txt">bibtex</a>]</p>
-
-	<p>&bull; Fang Yang, Junnan Gao, <b>Sicong Liu</b>, and Jian Song, "Clipping Noise Elimination for OFDM Systems by Compressed Sensing With Partially Aware Support," accepted by <i>IEEE Transactions on Broadcasting</i>, Jun. 2016.
-		[<a target="blank" href="https://ieeexplore.ieee.org/document/7571180">Abstract</a>][<a target="blank"  href="papers/TBC17yang.pdf">PDF</a>][<a target="blank"  href="papers/TBC17yang.txt">bibtex</a>]</p>
 
 	<p>&bull; Wenbo Ding, Fang Yang, <b>Sicong Liu</b>, Xianbin Wang, and Jian Song, "Non-Orthogonal Time-Frequency Training Sequence Based CSI Acquisition for MIMO Systems," <i>IEEE Transactions on Vehicular Technologies</i>, vol. 65, no. 7, pp. 5714-5719, July 2016.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/7175052">Abstract</a>][<a target="blank"  href="papers/TVT16ding.pdf">PDF</a>][<a target="blank"  href="papers/TVT16ding.txt">bibtex</a>]</p>
@@ -252,15 +256,14 @@
 	<p>&bull; Fang Yang, Junnan Gao, and <b>Sicong Liu</b>, "Priori Aided Compressed Sensing-Based Clipping Noise Cancellation for ACO-OFDM Systems," <i> IEEE Photonics Technology Letters</i>, vol. 28, no. 19, pp. 2082-2085, Oct.1, 1 2016.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/7500128">Abstract</a>][<a target="blank"  href="papers/PTL16yang2.pdf">PDF</a>][<a target="blank"  href="papers/PTL16yang2.txt">bibtex</a>]</p>
 
-	<p>&bull; Xu Ma, Fang Yang, <b>Sicong Liu</b>, Wenbo Ding, Jian Song, "Structured Compressive Sensing Based Channel Estimation for Time Frequency Training OFDM Systems over Doubly Selective Channel", in <i>IEEE Wireless Communications Letters</i>, vol. 6, no. 2, pp. 266-269, April 2017.
-		[<a target="blank" href="https://ieeexplore.ieee.org/document/7857041">Abstract</a>][<a target="blank"  href="papers/WCL17ma.pdf">PDF</a>][<a target="blank"  href="papers/WCL17ma.txt">bibtex</a>]</p>
+	<p>&bull; Wenbo Ding, Fang Yang, <b>Sicong Liu</b>, and Jian Song, "Structured compressive sensing-based non-orthogonal time-domain training channel state information acquisition for multiple input multiple output systems," IET Communications, vol. 10, no. 6, pp. 685-690, Apr. 2016.</p>
 
-	<p>&bull; Tengjiao Wang, <b>Sicong Liu</b>, Fang Yang, Jintao Wang, Jian Song, “Generalized Spatial Modulation Based Multi-User and Signal Detection Scheme for Terrestrial Return Channel with NOMA”, in <i>IEEE Transactions on Broadcasting</i>, vol. 64, no. 2, pp. 211-219, June 2018.
-		[<a target="blank" href="https://ieeexplore.ieee.org/document/8057263">Abstract</a>][<a target="blank"  href="papers/TBC18wang.pdf">PDF</a>][<a target="blank"  href="papers/TBC18wang.txt">bibtex</a>]</p>
+	<p>&bull; <b>Sicong Liu</b>, Fang Yang, Chao Zhang, Jian Song, "Narrowband interference mitigation based on compressive sensing for OFDM systems”, <i>IEICE Transactions on Fundamentals</i>, vol. E98-A, no. 3, pp. 870–873, March 2015.
+		[<a target="blank" href="http://search.ieice.org/bin/summary.php?id=e98-a_3_870&amp;year=2015">Abstract</a>][<a target="blank"  href="papers/IEICE.pdf">PDF</a>][<a target="blank"  href="papers/IEICE.txt">bibtex</a>]</p>
 
 	<p>&bull; Wenbo Ding, Fang Yang, <b>Sicong Liu</b>, and Jian Song, "Approach to suppress out-of-band emission for dual pseudo noise padded time-domain synchronous-orthogonal frequency division multiplexing systems," <i>IET Communications</i>, vol. 9, no. 13, pp. 1606-1614, Sep. 2015.</p>
 
-	<p>&bull; Wenbo Ding, Fang Yang, <b>Sicong Liu</b>, and Jian Song, "Structured compressive sensing-based non-orthogonal time-domain training channel state information acquisition for multiple input multiple output systems," IET Communications, vol. 10, no. 6, pp. 685-690, Apr. 2016.</p>
+
 
 <br>
 <p><strong>会议论文 Conferences</strong></p>
