--- a/sicongliu.html
+++ b/sicongliu.html
@@ -219,6 +219,9 @@
 	<p>&bull; X. Ma, F. Yang, <b>S. Liu</b>, J. Song and Z. Han, "Sparse Channel Estimation for MIMO-OFDM Systems in High-Mobility Situations," in <i>IEEE Transactions on Vehicular Technology</i>, vol. 67, no. 7, pp. 6113-6124, July 2018.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/8305666">Abstract</a>][<a target="blank"  href="papers/TVT18ma.pdf">PDF</a>][<a target="blank"  href="papers/TVT18ma.txt">bibtex</a>]</p>
 
+	<p>&bull; G. Sheng, M. Min, L. Xiao, <b>S. Liu</b>, "Reinforcement Learning-Based Control for Unmanned Aerial Vehicles", <i>Journal of Communications and Information Networks</i>, vol. 3, no. 3, pp. 39-48, Sept. 2018.
+		[<a target="blank" href="https://ieeexplore.ieee.org/abstract/document/8932304">Abstract</a>][<a target="blank"  href="papers/JCIN18sheng.pdf">PDF</a>][<a target="blank"  href="papers/JCIN18sheng.txt">bibtex</a>]</p>
+
 	<p>&bull; Tengjiao Wang, <b>Sicong Liu</b>, Fang Yang, Jintao Wang, Jian Song, “Generalized Spatial Modulation Based Multi-User and Signal Detection Scheme for Terrestrial Return Channel with NOMA”, in <i>IEEE Transactions on Broadcasting</i>, vol. 64, no. 2, pp. 211-219, June 2018.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/8057263">Abstract</a>][<a target="blank"  href="papers/TBC18wang.pdf">PDF</a>][<a target="blank"  href="papers/TBC18wang.txt">bibtex</a>]</p>
 
@@ -289,8 +292,8 @@
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, Fei Ren, Jia Li, "OFDM preamble design for synchronization under narrowband interference”, in <i>Proc. IEEE International Symposium on Power Line Communications (ISPLC)</i>, Johannesburg, South Africa, Mar. 2013, pp. 252-257.
 	[<a target="blank" href="https://ieeexplore.ieee.org/document/6525859">Abstract</a>][<a target="blank"  href="papers/ISPLC13.pdf">PDF</a>]</p>
 
-<p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, Zhu Han, "Impulsive Noise Cancellation for MIMO-OFDM PLC Systems: a Structured Compressed Sensing Perspective", to appear in <i>Proc. IEEE Global Communications Conference (Globecom)</i>, Dec. 2016.
-	[<a target="blank" href="https://ieeexplore.ieee.org/document/6525859">Abstract</a>][<a target="blank"  href="papers/ISPLC13.pdf">PDF</a>]</p>
+<p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, Zhu Han, "Impulsive Noise Cancellation for MIMO-OFDM PLC Systems: a Structured Compressed Sensing Perspective", in <i>Proc. IEEE Global Communications Conference (Globecom)</i>, Washington, DC, Dec. 2016.
+	[<a target="blank" href="https://ieeexplore.ieee.org/document/7841891">Abstract</a>][<a target="blank"  href="papers/GC16.pdf">PDF</a>]</p>
 
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, "NBI Cancellation for Smart Grid Communications: A Block Sparse Bayesian Learning Perspective", in <i>Proc. 2016 IEEE International Conference on Communications (ICC)</i>, Kuala Lumpur, May 2016, pp. 1-6.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, "Structured compressive sensing based narrowband interference mitigation for vehicular communications,” <i>Proc. IEEE International Conference on Communications (ICC’15)</i>, pp. 2375-2380, Jun. 2015.</p>
