--- a/sicongliu.html
+++ b/sicongliu.html
@@ -192,6 +192,8 @@
 
 <br>
 <p><strong>期刊论文 Journals</strong></p>
+<p>&bull; Y. Xiao, G. Niu, L. Xiao, Y. Ding, <b>S. Liu</b> and Y. Fan, "Reinforcement learning based energy-efficient internet-of-things video transmission," <i>Intelligent and Converged Networks</i>,  vol. 1, no. 3, pp. 258-270, Dec. 2020.
+	[<a target="blank" href="https://ieeexplore.ieee.org/document/9314164">Abstract</a>][<a target="blank"  href="papers/ICN20xiao.pdf">PDF</a>][<a target="blank"  href="papers/ICN20xiao.txt">bibtex</a>]</p>
 
 <p>&bull; L. Xiao, H. Zhang, Y. Xiao, X. Wan, <b>S. Liu</b>, L.-C. Wang, and H. V. Poor, "Reinforcement Learning-Based Downlink Interference Control for Ultra-Dense Small Cells," <i>IEEE Transactions on Wireless Communications</i>, vol. 19, no. 1, pp. 423-434, Jan. 2020.[<a target="blank" href="https://ieeexplore.ieee.org/document/8868117">Abstract</a>][<a target="blank"  href="papers/TWC19.pdf">PDF</a>][<a target="blank"  href="papers/TWC19.txt">bibtex</a>]</p>
 
