--- a/sicongliu.html
+++ b/sicongliu.html
@@ -71,7 +71,7 @@
 		担任宽带电力载波通信国家标准起草人。获评为福建省引进高层次人才（B类）。获中国电子学会自然科学二等奖（排名第3）、福建省科技进步三等奖（排名第3）、
 		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”称号。主持国家自然科学基金青年基金、福建省自然科学基金、厦门市青年创新基金等科研项目。
 		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。
-		担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会Publication Chair、IEEE ICCC 2021大会Workshop Chair、IEEE ICC 2019大会Session Chair、IEEE ICCE 2019大会Track Chair，
+		担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会Publication Chair、IEEE ISPLC 2021国际学术会议的TPC Chair, IEEE ICCC 2021大会Workshop Chair、IEEE ICC 2019大会Session Chair、IEEE ICCE 2019大会Track Chair，
 		以及包括IEEE ICC/Globecom在内的多个国际知名学术会议技术程序委员会委员。担任Frontiers in Communications and Networks 和 Future Internet Journal等国际学术期刊编委。
 		中国通信学会高级会员、IEEE会员、ACM会员、中国电子学会会员。</p>
 
@@ -92,7 +92,7 @@
 	He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China Youth Fund (NSFC), Natural Science Foundation of Fujian,
 	and Youth Innovation Fund of Xiamen. He has participated in major projects including the State Key Research Project, the National Major Project of Science and Technology,
 	and the Major Project of Science and Technology of Fujian.
-	He served as a the publication chair in IEEE SmartGridComm 2019, Workshop Chair of IEEE ICCC 2021, Session Chair of IEEE ICC 2019, Track Chair of IEEE ICCE 2019,
+	He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, Session Chair of IEEE ICC 2019, Track Chair of IEEE ICCE 2019,
 	and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.
 	He serves in the Editorial Board of academic journals including Future Internet Journal and Frontiers in Communications and Networks.
 	He is a senior member of China Institute of Communications (CIC), and a member of IEEE, ACM, and China Institute of Electronics (CIE).</p>
@@ -119,6 +119,7 @@
 	<p>&bull; 中国电子学会自然科学二等奖（排名第3），2019 </p>
 	<p>&bull; 福建省科技进步三等奖（排名第3），2019 </p>
 	<p>&bull; 福建省引进高层次人才（B类），2019 </p>
+	<p>&bull; 厦门市通信学会优秀论文一等奖（通讯作者），2019 </p>
 	<p>&bull; 清华大学优秀博士学位论文奖, 2017 </p>
 	<p>&bull; 清华大学优秀博士毕业生, 2017 </p>
 	<p>&bull; 北京市优秀毕业生, 2017 </p>
@@ -131,6 +132,7 @@
 	<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3rd), 2019 </p>
 	<p>&bull; Third Prize of Fujian Science and Technology Progress Award (ranking 3rd), 2019 </p>
 	<p>&bull; Fujian High-Level Introduced Talents (Type B), 2019 </p>
+	<p>&bull; Best Paper Award of Xiamen Institute of Communications（First Prize, Corresponding Author），2019 </p>
 	<p>&bull; Outstanding Doctoral Dissertation Award of Tsinghua University, 2017 </p>
 	<p>&bull; Outstanding PhD Graduate Award of Tsinghua University, 2017 </p>
 	<p>&bull; Outstanding Graduate Award of Beijing City, 2017 </p>
@@ -160,10 +162,11 @@
 
 
 <h3>学术服务 Academia Services</h3>
-	<p>&bull; Publication Chair of IEEE SmartGridComm 2019</p>
 	<p>&bull; Associate Editor of Frontiers in Communications and Networks</p>
 	<p>&bull; Guest Editor of Future Internet Journal</p>
+	<p>&bull; TPC Chair of IEEE International Symposium on Power Line Communications (ISPLC) 2021</p>
 	<p>&bull; Workshop Chair of IEEE International Conference on Communications in China (ICCC) 2021</p>
+	<p>&bull; Publication Chair of IEEE SmartGridComm 2019</p>
 	<p>&bull; Session/Track Chair/Co-Chair of IEEE ICC 2019, IEEE SmartGridComm 2019, IEEE ICCE 2019</p>
 	<p>&bull; TPC member of IEEE ICC, Globecom, SmartGridComm, WCNC, VTC, IWCMC, ICCC, ICSCC, WEDGE, etc. </p>
 	<p>&bull; Reviewer of IEEE JSAC, TCOM, TSP, TWC, TVT, TIFS, TDSC, IoTJ, TBC, COMML, WCOMML, etc.</p>
